# swim_results_ie

./: .gitignore
fastwave-results-api/: .dockerignore  .env.example  .gitignore  Dockerfile  KNOWN_ISSUES.md  README.md  alembic.ini  pyproject.toml  railway.json
fastwave-results-api/alembic/: env.py
fastwave-results-api/alembic/versions/: 3e9ddc65d870_baseline.py  5fca10e63ac1_refresh_tokens.py  8aa9ffeee218_relay_result_identity.py  bd3ef01c8b76_pg_trgm_swimmer_name_search.py  cea421c67009_gender_mixed_enum_value.py
fastwave-results-api/app/: audit.py  cli.py  config.py  db.py  email.py  main.py
fastwave-results-api/app/api/: caching.py  deps.py
fastwave-results-api/app/api/v1/: __init__.py  events.py  meets.py  results_common.py  swimmers.py
fastwave-results-api/app/auth/: bootstrap.py  deps.py  models.py  router.py  security.py
fastwave-results-api/app/claims/: router.py
fastwave-results-api/app/ingestion/: _mappings.py  checksums.py  cli.py  matching.py  promote.py  report.py  service.py  storage.py  storage_r2.py
fastwave-results-api/app/models/: __init__.py  base.py  clubs.py  enums.py  ingestion.py  meets.py  results.py  swimmers.py  types.py  users.py
fastwave-results-api/app/private/: router.py
fastwave-results-api/app/schemas/: admin.py  auth.py  claims.py  private.py  public.py  uploads.py
fastwave-results-api/app/uploads/: router.py
fastwave-results-api/app/utils/: season.py  times.py
fastwave-results-api/scripts/: seed_demo.sh  smoke.sh
fastwave-results-api/tests/: test_config.py  test_db.py  test_smoke.py
fastwave-results-api/tests/api/: auth_helpers.py  conftest.py  gdpr.py  test_audit_log.py  test_auth.py  test_claims.py  test_coach_affiliations.py  test_events.py  test_match_reviews.py  test_meets.py  test_openapi.py  test_private.py  test_publish.py  test_relay.py  test_results_common.py  test_swimmers.py  test_uploads.py
fastwave-results-api/tests/fixtures/: michael_bowles_2026.hy3
fastwave-results-api/tests/ingestion/: conftest.py  relay_fixture.py  test_checksums.py  test_conversions.py  test_failed_upload_retry.py  test_ingest_fixture.py  test_mixed_gender_relay.py  test_relay_ingest.py  test_result_check_constraint.py  test_storage_r2.py
fastwave-results-api/tests/utils/: test_season.py  test_times.py
