[project]
name = "fastwave-results-api"
version = "0.1.0"
description = "Fastwave Results API - Irish swimming results database backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "hytek-parser",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv.sources]
# Vendored *inside* this directory tree (not a sibling) deliberately: Railway's
# Root Directory setting scopes the entire build context to this folder, so a
# "../hytek-parser" sibling path is invisible to the build (confirmed via a
# failed deploy - "Distribution not found at: file:///hytek-parser").
hytek-parser = { path = "vendor/hytek-parser" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
# Explicit, not just convention: vendor/hytek-parser (see [tool.uv.sources])
# has its own tests/ directory, which pytest's default recursive collection
# would otherwise pick up too - it isn't set up to run outside its own
# project (different fixtures/deps), so scope collection to our own tests.
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
